syntax = "proto3";

package api.transport.response;
option go_package = "github.com/yusank/goim/api/transport/response";

enum Code {
  OK = 0;

  // common error codes
  InternalError = 10001;
  InvalidParams = 10002;
  DBError = 10003;
  CacheError = 10004;

  // user error codes
  UserNotExist = 20001;
  UserExist = 20002;
  InvalidUsernameOrPassword = 20003;

  // relation error codes
  RelationNotExist = 30001;
  RelationExist = 30002;
  InvalidUpdateRelationAction = 30003;

  // friend request error codes
  FriendRequestNotExist = 31001;
  FriendRequestStatusError = 31002;

  // push server error codes
  UserNotOnline = 40001;
}

// BaseResponse use as define response code and message
message BaseResponse {
  Code code = 1;
  string reason = 2;
  string message = 3;
}
